--- a/style.css
+++ b/style.css
@@ -9,4 +9,24 @@
     height: 500px;
     border-bottom: 15px solid green;
     margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+    background-color:linear-gradient(#87ceeb,#e0f6ff);
+}
+
+.pipe {
+    position: absolute;
+    bottom: 0;
+    width: 80px;
+}
+
+.mario {
+    width: 150px;
+    position: absolute;
+    bottom: 0;
+}
+
+.nuvem {
+    position: absolute;
+    width: 550px;
 }
