--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box
 }
 
-.game-board {
+.game-board{
     width: 100%;
     height: 500px;
     border-bottom: 15px solid green;
@@ -14,20 +14,24 @@
     background-color:linear-gradient(#87ceeb,#e0f6ff);
 }
 
-.pipe {
+.pipe{
     position: absolute;
     bottom: 0;
     width: 80px;
     animation: pipe-animation 1.5s infinite linear;
 }
 
-.mario {
+.mario{
     width: 150px;
     position: absolute;
     bottom: 0;
 }
 
-.nuvem {
+.nuvem{
+    animation: jump 500ms ease-out;
+}
+
+.nuvem{
     position: absolute;
     width: 550px;
     animation: clounds-animation 20s infinite linear;
